version 0.3.1 accidentaly changed title on one button now fixed, margin on the dark mode toggle also fixed

--- a/style.css
+++ b/style.css
@@ -112,8 +112,8 @@ body {
 
   #dark-mode-toggle {
     position: fixed;
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    right: 20px;
     padding: 8px 12px;
     background-color: #ddd;
     border: none;
